Migrate to Java 8.